<resources>
    <string name="app_name">ShopAssistant</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello">Listview Hello!</string>
    <string name="search_results">We found about 12 results matching your search criteria</string>
    <string name="Rating_info">324 Votes</string>
    <string name="Search">SEARCH...</string>
    <string name="MENU_rabbit">Rabbit</string>
    <string name="MENU_action">MENU</string>
    <string name="write_comment">Write your comment here</string>






    <string name="action_settings">Settings</string>
    <string name="btnBack">New scan</string>
    <string name="iphone5_product">iphone5</string>
    <string name="btnSort">Sort by date</string>
    <string name="btnSortPopular">Sort by popularity</string>

    <string name="shoes1Text">Unlocked cell phones are compatible with GSM carriers like ATT and T-Mobile as well as with GSM SIM cards
        (e.g. H20,Straight Talk, and select prepaid carriers). Unlocked cell phones will not work with CDMA Carriers like Sprint,Verizon, Boost or Virgin. Size 16 GB
        </string>


    <string name="commentNumber">Numbers of comment: </string>
    <string name="btnWriteComment">Write\ncomment</string>
    <string name="Back_to_product">Back to Product</string>
    <string name="Back_to_scan">New scaning</string>
    <string name="Shoe1">Adidas Kanadia</string>
    <string name="your_comments">Your comments:</string>
    <string name="remaining_character">Characters left:300</string>
    <string name="btn_send">Send comment</string>

    <string name="comment1DateAndName">10.3.2015 | John</string>
    <string name="comment1Text"> it provides me all that Apple can user-friendly interface, perfect phone camera, perfect music quality, perfect screen quality, reliability and etc.</string>
    <string name="comment1VoteScore">+34/-4</string>

    <string name="comment2DateAndName">20.5.2015 | River</string>
    <string name="comment2Text">My experience is worst and I am disappointed. Price/value ratio is less than Lenovo forexample. I have no offer warmly. </string>
    <string name="comment2VoteScore">+4/-46</string>

    <string name="comment3DateAndName">3.1.2015 | Bolt</string>
    <string name="comment3Text">Great smartphone by Apple. It is my best.</string>

    <string name="comment4DateAndName">Today | Unsigned user</string>
    <string name="menu_user">User acount</string>
    <string name="menu_histori">Viewed product</string>
    <string name="btnSearchManualy">Search manualy</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_scan">Shop assistant</string>
    <string name="title_activity_write_comment">Write Comment</string>
    <string name="imgScaningProcess">Scanning process</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_search_result">SearchResultActivity</string>

    <string name="photo1Description">Gold variant</string>
    <string name="photo2Description">Video performance</string>
    <string name="photo3Description">Black variant</string>
    <string name="photo4Description">Smart design</string>
    <string name="photo5Description">Retina display</string>
    <string name="photo6Description">Black variant</string>
    <string name="photo7Description">Various variant</string>
    <string name="photo8Description">Other covers</string>

    <string name="characterLeft">Characters left:</string>

    <string-array name="products_array">
        <item>Watch</item>
        <item>Walkman</item>
        <item>Wallet</item>
        <item>iWatch</item>
        <item>Wii</item>
        <item>iphone</item>
        <item>i-phone</item>
        <item>I-phone</item>
        <item>Iphone</item>
        <item>Phone</item>
        <item>Tablet</item>
        <item>Samsung</item>
        <item>Samsung Neo</item>
        <item>Galaxy S3</item>
        <item>Smart Device</item>
        <item>Smart Phone</item>
        <item>Smart Watch</item>
        <item>Smart Telephone</item>
        <item>Smart Electronic Device</item>
        <item>Electronic Device</item>


    </string-array>

    <string name="za">Hot product - Watch</string>
    <string name="zb">Hot product - Tablet</string>
    <string name="zc">Hot product - Iphone 5S</string>
    <string name="zd">Hot product - Samsung GALAXY S4</string>

    <string name="zf">Hot product - Iphone 6</string>
    <string name="zg">Hot product - Samsung GALAXY S6</string>
    <string name="zh">Hot product - LG723 G3</string>
    <string name="zi">Hot product - Samsung S3 NEO</string>
    <string name="zj">Hot product - Samsung S3 MINI</string>
    <string name="zk">Hot product - Samsung NEO PLUS</string>
    <string name="hintSearch">Name of product</string>
    <string name="ScanExplonation">Scan QR code by using camera. </string>
    <string name="hotProduct">Hot products</string>

</resources>
