<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/SrollId"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        >


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/Adidas_kanadia"
                android:layout_width="wrap_content"
                android:textSize="15pt"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50pt"
                        android:layout_height="50pt"
                        android:id="@+id/shoes1"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/shoes1"
                        />
                <ImageView
                    android:layout_width="50pt"
                    android:layout_height="50pt"
                    android:id="@+id/shoes2"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/shoes1"
                    />
                <ImageView
                    android:layout_width="50pt"
                    android:layout_height="50pt"
                    android:id="@+id/shoes3"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/shoes1"
                    />

             </LinearLayout>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/ratingBar"
                android:rating="3.5" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/shoes1Text"

                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnWriteComment"

                android:onClick="btnWriteCommentClick" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal"
                android:gravity="right">

                <TextView
                    android:layout_width="0pt"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/commentNumber"



                    />



                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnSort"
                    />

             </LinearLayout>


            <!-- ############       Comment 1 beging         ##################################    -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment1DateAndName"
                android:textSize="8pt"
            />


            <RatingBar
                android:id="@+id/MyRating1"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1"
                android:rating="3"
                />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal"
            android:gravity="right">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/face1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment1Text"
             />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal"
                android:gravity="center"



               >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment1VoteScore"
                    android:id="@+id/coment1LikeScore"
                    />

                <ImageButton
                    android:layout_width="20pt"
                    android:layout_height="20pt"
                    android:src="@drawable/like"
                    android:id="@+id/btnComment1Like"
                    android:onClick="btnComment1LikeClick"
                    android:scaleType="fitCenter" />


                <ImageButton
                    android:layout_width="20pt"
                    android:layout_height="20pt"
                    android:src="@drawable/unlike"
                    android:id="@+id/btnComment1Dislike"
                    android:onClick="btnComment1DislikeClick"
                    android:scaleType="fitCenter" />
            </LinearLayout>

            <!-- ############       Comment 1 end         ##################################    -->



            <!-- ############       Comment 2 beging         ##################################    -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment2DateAndName"
                android:textSize="8pt"
                />


            <RatingBar
                android:id="@+id/MyRating2"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1"
                android:rating="3"
                />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal"
                android:gravity="right">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/face2"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment2Text"
                    />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal"
                android:gravity="center"



                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment2VoteScore"
                    android:id="@+id/coment2LikeScore"
                    />

                <ImageButton
                    android:layout_width="20pt"
                    android:layout_height="20pt"
                    android:src="@drawable/like"
                    android:id="@+id/btnComment2Like"
                    android:onClick="btnComment2LikeClick"
                    android:scaleType="fitCenter" />
                <ImageButton
                    android:layout_width="20pt"
                    android:layout_height="20pt"
                    android:id="@+id/btnComment2Dislike"
                    android:onClick="btnComment2DislikeClick"
                    android:src="@drawable/unlike"

                    android:scaleType="fitCenter" />
            </LinearLayout>

            <!-- ############       Comment 2 end         ##################################    -->


        </LinearLayout>

    </ScrollView>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar2"
        android:layout_gravity="right" />


</LinearLayout>
